data/derived/fa15/progs/unify/prog2946.ml.out
Characters 63-79:
  | hd:: tail -> listReverse tail :: hd;;
                 ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
